Skeleton Key 1.2.2
================================================================================
~ PHP 8.5 compatibility: setAccessible is deprecated for reflection objects

Skeleton Key 1.2.1
================================================================================
~ Preliminary support for Joomla 6

Skeleton Key 1.2.0
================================================================================
~ Added padding after the icon [gh-15]

Skeleton Key 1.1.0
================================================================================
+ Action Log plugin [gh-11]
# [LOW] The PLG_SYSTEM_SKELETONKEY_LBL_NOAUTHPLUGIN message may appear untranslated [gh-12]

Skeleton Key 1.0.7
================================================================================
~ Support for Joomla! 5.1's createQuery method in the db object
# [HIGH] Does not work on some sites / browsers [gh-9]

Skeleton Key 1.0.6
================================================================================
+ Open the frontend page in a new tab

Skeleton Key 1.0.5
================================================================================
~ Block uninstallation of child extensions

Skeleton Key 1.0.4
================================================================================
# [HIGH] PHP 8 warning may prevent the login from working

Skeleton Key 1.0.3
================================================================================
# [LOW] Untranslated key PLG_SYSTEM_SKELETONKEY_LBL_NOAUTHPLUGIN when the Authentication plugin is not published.

Skeleton Key 1.0.2
================================================================================
# [HIGH] Immediate error on PHP 8 because of the idiotic way default options for multiselect fields work in Joomla.
# [HIGH] Wrong update site URL

Skeleton Key 1.0.1
================================================================================
# [LOW] The package insisted that it needs a Download Key; it actually doesn't.

Skeleton Key 1.0.0